<resources>
    <string name="app_name">Kullo</string>
    <string name="app_name_full">Kullo for Android</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="save">Save</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="ok">@android:string/ok</string>
    <string name="error_title">Something went wrong</string>
    <string name="please_wait">Please wait…</string>
    <string name="kullo_address">Kullo address</string>
    <string name="kullo_masterkey">MasterKey</string>
    <string name="kullo_domain" translatable="false">#kullo.net</string>
    <string name="name">Name</string>
    <string name="organization">Organization</string>
    <string name="organization_opt">Organization (optional)</string>
    <string name="footer">Footer</string>
    <string name="text_view_ellipsis">…</string>
    <string name="action_toggle_message_size">Inflate</string>
    <string name="action_delete">Delete</string>
    <string name="action_search">Search</string>
    <string name="action_sync">Synchronize</string>
    <string name="action_finish">Finish</string>
    <string name="action_done">Done</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="network_error_title">Network error</string>
    <string name="network_error_forbidden">Client too old or otherwise blocked. Please check for update.</string>
    <string name="network_error_protocol">Client and server incompatible. Please check for update.</string>
    <string name="network_error_unauthorized">Invalid login credentials (Kullo address + MasterKey).</string>
    <string name="network_error_server">Server-side error. This is not your fault.</string>
    <string name="network_error_connection">Network connection couldn\'t be established.</string>
    <string name="network_error_unknown">Unknown error.</string>
    <string name="welcome_open_inbox">Open inbox</string>
    <string name="welcome_action_open">Open</string>
    <string name="welcome_already_address">You already have a Kullo address?</string>
    <string name="welcome_need_address">You need a new Kullo address?</string>
    <string name="login_error_address_invalid">Invalid Kullo address</string>
    <string name="login_error_masterkey_block_invalid">Invalid</string>
    <string name="login_error_failed_title">Login failed</string>
    <string name="login_error_failed_description">Invalid combination of Kullo address and MasterKey.</string>
    <string name="create_session_progress_login_title">Login</string>
    <string name="create_session_please_wait">@string/please_wait</string>
    <string name="create_session_migrating">Optimizing inbox …</string>
    <string name="leave_inbox_confirmation_title">Leave inbox?</string>
    <string name="leave_inbox_confirmation_description">You will not receive push notifications for %s anymore.</string>
    <string name="leave_inbox_confirmation_positive">@android:string/ok</string>
    <string name="leave_inbox_confirmation_negative">Cancel</string>
    <string name="leaving_inbox_title">Leaving inbox…</string>
    <string name="leaving_inbox_description">Switching back to welcome screen</string>
    <string name="generate_keys_title">Generating keys%1$s</string>
    <string name="generate_keys_description_short">This may take a few minutes. Please be patient.</string>
    <string name="generate_keys_description_long">Right now, Kullo is generating strong cryptographic keys that you\'re going use to communicate securely. Finding secure keys takes some time because Kullo needs to make sure they are as secure as advertised. Kullo generates those keys on your device such that nobody else learns about them – including us.</string>
    <string name="choose_address_title">Choose your Kullo address</string>
    <string name="choose_address_username_placeholder">Username</string>
    <string name="choose_address_valid_address_instructions">You can use letters and numbers. You can use more than one word, separated by . - or _.</string>
    <string name="choose_address_address_is_invalid">Address format not valid</string>
    <string name="choose_address_address_already_exists">Address already exists</string>
    <string name="choose_address_address_blocked">Address blocked</string>
    <string name="choose_address_challenge_needed">You cannot register this address without a challenge. Challenges are not yet supported on Kullo for Android.</string>
    <string name="registration_terms_of_service">I accept the &lt;a href=&quot;%1$s&quot;&gt;terms of service&lt;/a&gt;</string>
    <string name="could_not_start_registration">Registration failed.</string>
    <string name="menu_conversations">Inbox</string>
    <string name="menu_profile_settings">Profile</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_masterkey">MasterKey</string>
    <string name="menu_about">About</string>
    <string name="menu_leave_inbox">Leave inbox</string>
    <string name="open_drawer">Open menu</string>
    <string name="close_drawer">Close menu</string>
    <string name="account_overlay_network_error">Network error when getting account information</string>
    <string name="account_overlay_button_retry">Retry</string>
    <string name="account_overlay_button_settings">Account settings</string>
    <string name="account_overlay_storage_label">Inbox storage used</string>
    <string name="account_overlay_plan_label">Plan</string>
    <string name="empty_conversation_title">New</string>
    <string name="conversations_empty_state_text">Right now, there are no conversations in this inbox. Synchronize to get messages from the inbox server or start a new conversation.</string>
    <string name="conversation_options">Edit conversation</string>
    <string name="actionmode_title_n_selected">%1$d selected</string>
    <string name="conversations_confirm_delete_title_1">Delete conversation</string>
    <string name="conversations_confirm_delete_title_n">Delete conversations</string>
    <string name="conversations_confirm_delete_body_part1_1">Delete one conversation</string>
    <string name="conversations_confirm_delete_body_part1_n">Delete %d conversations</string>
    <string name="conversations_confirm_delete_body_part2_1">with one message in total?</string>
    <string name="conversations_confirm_delete_body_part2_n">with %d messages in total?</string>
    <string name="conversations_toast_deleting_empty_1">Deleting one empty conversation</string>
    <string name="conversations_toast_deleting_empty_n">Deleting %d empty conversations</string>
    <string name="conversation_info_teaser_conversation_with">Conversation with %s</string>
    <string name="conversation_info_teaser_with_x_participants">%d participants</string>
    <string name="message_text_placeholder" translatable="false">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="message_options">Edit message</string>
    <string name="empty_messages_list">There are no messages in this conversation.</string>
    <string name="conversation_info_title">Conversation info</string>
    <string name="action_start_conversation_with">Start conversation with</string>
    <string name="singlemessage_compose">Write</string>
    <string name="singlemessage_file_save_to_canceled">Save action canceled</string>
    <string name="singlemessage_file_save_failed">Save action failed</string>
    <string name="attachments_cannot_open_externaldir_title">Cannot open external storage</string>
    <string name="attachments_cannot_open_externaldir_text">Cannot open external directory for attachment storage.</string>
    <string name="attachments_unknown_mimetype_title">Unknown file type</string>
    <string name="attachments_unknown_mimetype_text">No app found that can open this file type.</string>
    <string name="exporting_to_downloads_folder">Exporting file to downloads folder</string>
    <string name="export_successful_header">Finished export to downloads folder</string>
    <string name="export_successful_confirm_file_opening">Do you want to open the file now?</string>
    <string name="action_open_with">Open with</string>
    <string name="action_share">Share</string>
    <string name="action_save_as">Save as</string>
    <string name="settings_remove_avatar">Clear avatar</string>
    <string name="settings_save_confirmation">Settings saved</string>
    <string name="settings_name_empty_error">Name must not be empty</string>
    <string name="select_image_source">Select image source</string>
    <string name="capture_image_canceled">Image capture canceled</string>
    <string name="action_rotate_image">Rotate</string>
    <string name="crop_image">Crop image</string>
    <string name="settings_permission_missing_storage">App permission missing: storage</string>
    <string name="app_version">version %1$s</string>
    <string name="impressum_card_title">Carefully crafted</string>
    <string name="impressum_card_subtitle">in Germany</string>
    <string name="impressum_content_address" translatable="false">Kullo GmbH\nKranzplatz 5–6\n65183 Wiesbaden</string>
    <string name="action_impressum">Impressum</string>
    <string name="open_website">Website</string>
    <string name="action_licenses">Licenses</string>
    <string name="about_title_app_features">App features</string>
    <string name="about_push_notifications_text">Push notifications: %1$s</string>
    <string name="about_gplay_available">Google Play services ok</string>
    <string name="about_gplay_not_available">Google Play services not available (%1$s)</string>
    <string name="about_gplay_not_available_status_disabled">disabled</string>
    <string name="about_gplay_not_available_status_missing">missing</string>
    <string name="about_gplay_not_available_status_update_required">update required</string>
    <string name="about_gplay_not_available_status_unknown">unknown</string>
    <string name="about_gplay_not_available_status_updating">update installing</string>
    <string name="activity_title_licenses">Licenses</string>
    <string name="licenses_text_kudos">Kullo is proudly based on open source software. Kudos to %1$s.</string>
    <string name="activity_title_impressum">Impressum</string>
    <string name="impressum_content_full">Provider\nKullo GmbH\nKranzplatz 5–6\n65183 Wiesbaden\n\nRepresentation\nVertretungsberechtigte Geschäftsführer:\nSimon Warta, Daniel Seither\n\nContact\n0175 1930541\nsimon@kullo.net\nsimon#kullo.net\n\nCommercial register\nRegistergericht: Amtsgericht Wiesbaden\nRegisternummer: HRB 27626\n\nVAT identification number\nDE294537976</string>
    <string name="start_conversation_new_conversation">New Conversation</string>
    <string name="start_conversation_add_participant">Add</string>
    <string name="start_conversation_recipients">Recipients</string>
    <string name="start_conversation_address_not_exist">Address does not exist</string>
    <string name="start_conversation_address_check_failed_error_header">Address verification failed</string>
    <string name="search_direction_all">all</string>
    <string name="search_direction_received">received</string>
    <string name="search_direction_sent">sent</string>
</resources>