<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.WelcomeActivity">

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/header_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_marginBottom="16dp"
            android:src="@drawable/kullo_account_switcher_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_below="@id/header_background"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/open_inbox_controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="12dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_open_inbox"
                    android:textSize="16sp"
                    android:textColor="@color/kulloTextPrimaryColor"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <Spinner
                        android:id="@+id/spinner_open_inbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/button_open_inbox"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        />

                    <Button
                        android:id="@+id/button_open_inbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_action_open"
                        android:theme="@style/Button.Tinted"
                        android:layout_alignParentRight="true"
                        />
                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_already_address"
                android:textSize="16sp"
                android:textColor="@color/kulloTextPrimaryColor"
                />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <Button
                        android:id="@+id/button_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_login"
                        android:theme="@style/Button.Tinted"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_need_address"
                    android:textSize="16sp"
                    android:textColor="@color/kulloTextPrimaryColor"
                    android:layout_marginTop="12dp"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <Button
                        android:id="@+id/button_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_register"
                        android:theme="@style/Button.Tinted"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>