<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.kullo.android.screens.AboutActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/md_additions_card_margin"
                android:layout_marginLeft="@dimen/md_additions_card_margin"
                android:layout_marginRight="@dimen/md_additions_card_margin"
                >
                <LinearLayout
                    android:id="@+id/card_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/md_additions_card_padding_big"
                        android:layout_marginLeft="@dimen/md_additions_card_padding"
                        android:layout_marginRight="@dimen/md_additions_card_padding"
                        android:text="@string/app_name_full"
                        style="@style/MdAdditions.Card.Title"
                        />
                    <TextView
                        android:id="@+id/app_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/md_additions_card_padding"
                        android:layout_marginRight="@dimen/md_additions_card_padding"
                        android:layout_marginBottom="@dimen/md_additions_card_padding"
                        android:text="@string/app_version"
                        style="@style/MdAdditions.Card.Subtitle"
                        />
                    <TextView
                        android:id="@+id/kudos_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/md_additions_card_padding"
                        android:layout_marginRight="@dimen/md_additions_card_padding"
                        android:layout_marginBottom="@dimen/md_additions_card_padding"
                        android:text="@string/licenses_text_kudos"
                        />
                    <!-- buttons row -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/md_additions_card_padding_action"
                        >
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Button.Borderless"
                            android:text="@string/action_licenses"
                            android:onClick="openLicensesClicked" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/md_additions_card_margin"
                android:layout_marginLeft="@dimen/md_additions_card_margin"
                android:layout_marginRight="@dimen/md_additions_card_margin"
                >
                <LinearLayout
                    android:id="@+id/card_features_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/md_additions_card_padding_big"
                        android:layout_marginLeft="@dimen/md_additions_card_padding"
                        android:layout_marginRight="@dimen/md_additions_card_padding"
                        android:layout_marginBottom="@dimen/md_additions_card_padding"
                        android:text="@string/about_title_app_features"
                        style="@style/MdAdditions.Card.Title"
                        />
                    <TextView
                        android:id="@+id/about_push_notifications_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/md_additions_card_padding"
                        android:layout_marginRight="@dimen/md_additions_card_padding"
                        android:layout_marginBottom="@dimen/md_additions_card_padding"
                        android:text="@string/about_push_notifications_text"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/md_additions_card_margin"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <!-- card header -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/md_additions_card_padding_big"
                        android:layout_marginLeft="@dimen/md_additions_card_padding"
                        android:layout_marginRight="@dimen/md_additions_card_padding"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/impressum_card_title"
                            style="@style/MdAdditions.Card.Title"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/md_additions_card_subtitle"
                            android:text="@string/impressum_card_subtitle"
                            style="@style/MdAdditions.Card.Subtitle"
                            />

                    </LinearLayout>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/team_photo"
                        android:layout_marginTop="@dimen/md_additions_card_padding"
                        android:layout_marginBottom="@dimen/md_additions_card_padding"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/md_additions_card_padding"
                        android:layout_marginRight="@dimen/md_additions_card_padding"
                        android:layout_marginBottom="@dimen/md_additions_card_padding"
                        android:text="@string/impressum_content_address"
                        />
                    <!-- buttons row -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/md_additions_card_padding_action"
                        >
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Button.Borderless"
                            android:text="@string/action_impressum"
                            android:onClick="openImpressumClicked" />
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Button.Borderless"
                            android:text="@string/open_website"
                            android:onClick="openWebsiteClicked" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
