<?xml version="1.0" encoding="utf-8"?>
<!--
Don't focus input by default. Let the user review the current draft first
http://stackoverflow.com/a/8639921
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusableInTouchMode="true"
    tools:context=".screens.ProfileSettingsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_kullo_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text|textCapWords"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/edit_kullo_organization_text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_kullo_organization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_kullo_organization_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/organization"
                    android:inputType="text|textCapWords"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/edit_kullo_footer_text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_kullo_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_kullo_footer_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/footer"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/settings_avatar_view"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:src="@drawable/dummy_avatar_120dp"
                android:background="@drawable/background_for_transparent_images"
                />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
